# ParallerServer_ProblemSolver

./: CMakeLists.txt  README.md  main.cpp
Algorithms/: AStarPriQue.h  Astar.h  BFS.h  BestFS.h  Cell.h  DFS.h  PStatePriQue.h  PStateUnorderedSet.h  Searchable.h  SearchableMatrix.cpp  SearchableMatrix.h  Searcher.h  State.h
Drafts/: client.h  client.py  extra.h
Etc/: MyException.cpp  MyException.h  Utils.cpp  Utils.h
Server Client/: ClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Server.h  TCP_client.cpp  TCP_client.h  TCP_server.cpp  TCP_server.h  TCP_socket.cpp  TCP_socket.h
Solver And Cacher/: CacheManager.h  FileCacheManager.cpp  FileCacheManager.h  MatrixSolver.cpp  MatrixSolver.h  Solver.h  StringReverser.cpp  StringReverser.h
